--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html, body
 
 h1, h2, h3, p
 {
-	font-family: 'Times New Roman', sans-serif;
+	font-family:'Allerta Stencil'; font-size: 22px;
 	color: #535456;
 }
 
